# cyberjection

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: cyberjection.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
cyberjection/: __init__.py
cyberjection/attacks/: __init__.py  attacker.py  base.py  crescendo.py  jailbreak.py  prompt_injection.py  state.py  system_extraction.py  tap.py
cyberjection/cli/: __init__.py  main.py
cyberjection/config/: __init__.py  loader.py  schema.py
cyberjection/distributed/: __init__.py  celery_app.py  coordinator.py  rate_limiter.py  retry.py  tasks.py
cyberjection/evaluators/: __init__.py  ahocorasick.py  base.py  cascade.py  llamaguard.py  llmjudge.py  regex.py
cyberjection/mutators/: __init__.py  base.py  base64_mutator.py  registry.py  rot13.py  typoglycemia.py  unicode_mutator.py
cyberjection/persistence/: __init__.py  models.py  repository.py  resumability.py  sqlite.py
cyberjection/providers/: __init__.py  base.py  litellm_provider.py
cyberjection/reporting/: __init__.py  exporters.py  models.py  quality_gate.py  sarif.py
cyberjection/utils/: __init__.py  context.py  exceptions.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  TESTING.md
examples/: quickstart.yaml
tests/: conftest.py
tests/unit/: test_attack_state.py  test_attacker_agent.py  test_cascade_escalation.py  test_cli.py  test_config_loader.py  test_coordinator.py  test_crescendo_engine.py  test_database_models.py  test_exporters.py  (+16 more)
(+2 files in other folders)
